# esp32c3-event-notifier

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
event-notifier/: Cargo.toml
event-notifier/.cargo/: config.toml
event-notifier/src/: main.rs
src/: main.rs
tcp-server/src/: main.rs
