[package]
name = "esp32c3-event-notifier"
version = "0.1.0"
edition = "2021"

[build-dependencies]
embuild = "0.32.0"

[profile.release]
opt-level = "z" # optimize for size
[patch.crates-io]
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys", rev = "93c031d9" }

[dependencies]
esp-idf-svc = "0.49.1"
