[package]
name = "esp32c3-event-notifier"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z" # optimize for size

[dependencies]
esp-alloc = "0.5.0"
esp-backtrace = { version = "0.14.2", features = [
    "panic-handler",
    "exception-handler",
    "println",
    "esp32c3",
] }
esp-hal = { version = "0.22.0", features = ["esp32c3"] }
esp-println = { version = "0.12.0", features = ["esp32c3"] }
esp-wifi = { version = "0.11.0", features = ["esp32c3", "utils", "wifi"] }
smoltcp = { version = "0.11", default-features = false, features = [
    "medium-ethernet",
    "proto-ipv4",
    "socket-tcp",
] }
